feat: 채팅방 목록/메시지 응답 필드 확장